# ROS_FLOW_2_1

./: .git-rewrite-secrets.txt  .gitignore  ARTIFACT_AUDITOR_FINALIZATION_SUMMARY.md  BRANCH_INCORPORATION_REPORT.md  CLINICAL_SECTION_DRAFTER_WIRING_COMPLETE.md  COMPLETE_WIRING_STATUS_REPORT.md  COMPLIANCE_AUDITOR_DEPLOYMENT_COMMANDS.md  COMPLIANCE_AUDITOR_QUICK_DEPLOY.md  COMPLIANCE_AUDITOR_WIRING_COMPLETE.md  COMPLIANCE_AUDITOR_WIRING_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_SCRIPTS_README.md  DISPATCH_ROUTING_VALIDATION_COMPLETE.md  DISSEMINATION_FORMATTER_WIRING_COMPLETE.md  EVIDENCE_SYNTHESIS_DEPLOYMENT_SUMMARY.md  EXECUTION_GATE_PROOF_RUNBOOK.md  EXECUTION_SWEEP_GUIDE.md  EXECUTION_SWEEP_QUICK_DEPLOY.md  EXECUTION_SWEEP_RESULTS.md  EXECUTION_SWEEP_V2_FINAL_REPORT.md  FINAL_EXECUTION_SUMMARY.md  GO_LIVE_CHECKLIST.md  HETZNER_COMMANDS.txt  HETZNER_DEPLOYMENT_COMPLETE.md  HETZNER_DEPLOYMENT_FINAL_SUCCESS.md  HETZNER_DEPLOYMENT_INSTRUCTIONS.md  HETZNER_DEPLOYMENT_TOPOLOGY.md  HETZNER_DEPLOYMENT_VALIDATION_FINAL.md  HETZNER_EXECUTE_NOW.sh  IMPLEMENTATION_SUMMARY.md  JOURNAL_GUIDELINES_CACHE_HARDENING_COMPLETE.md  LANGSMITH_AGENTS_PROXY_ARCHITECTURE.md  LANGSMITH_INTEGRATION_COMPLETE.md  LANGSMITH_PROXY_IMPLEMENTATION_SUMMARY.md  LITERATURE_TRIAGE_WIRING_COMPLETE.md  MILESTONE_03_AGENT_FLEET_SCAFFOLD.md  MILESTONE_03_COMPLETION_REPORT.md  MILESTONE_03_HEALTH_CHECKPOINT_PASSED.md  MISSING_AGENTS_DEPLOYMENT_COMPLETE.md  NEXT_STEPS_DISSEMINATION_FORMATTER.md  ORCHESTRATION_CLEANUP_COMPLETE.md  (+17 more)
researchflow-production-main/: .continuerc.yaml  .continuerules  .env.example  .env.production.template  .git-commit-msg.txt  .git-push-helper.sh  .gitignore  .pre-commit-config.yaml  AGENTS_EXECUTE_NOW.md  AGENT_01_SECURITY_REVIEW_BRIEFING.md  AGENT_02_SNYK_SCAN_BRIEFING.md  AGENT_03_TEST_COVERAGE_BRIEFING.md  AGENT_04_SENTRY_ERROR_BRIEFING.md  AGENT_04_TRIAGE_GITHUB_BRIEFING.md  AGENT_05_GITHUB_ISSUE_BRIEFING.md  AGENT_06_CHANGELOG_BRIEFING.md  AGENT_ARTIFACT_AUDITOR_BRIEFING.md  AGENT_BIAS_DETECTION_BRIEFING.md  AGENT_COMPLIANCE_AUDITOR_BRIEFING.md  AGENT_COORDINATION_DASHBOARD.md  AGENT_DELEGATION_BRIEFING.md  AGENT_EVIDENCE_SYNTHESIS_BRIEFING.md  AGENT_EXECUTION_PLAN.md  AGENT_EXECUTION_STATUS_REPORT.md  AGENT_INFRASTRUCTURE_SUMMARY.md  AGENT_INVENTORY.md  AGENT_RESULTS_INTERPRETATION_BRIEFING.md  AI_ENHANCEMENT_DEPLOYMENT_GUIDE.md  AI_IMPLEMENTATION_COMPLETE.md  ANALYTICS_DEPLOYMENT_BRIEFING.md  AUDIT_FIX_TEST_RESULTS.md  BIAS_DETECTION_WIRING_REPORT.md  BIAS_WIRING_SUMMARY.md  CANONICAL_AGENT_TIERING_POLICY.md  CHECKLISTS_API_GUIDE.md  CHECKPOINT_PHASE5_COMPLETE.md  CHECKPOINT_PHASE6_STATUS.md  CLAUDE.md  CLEANUP_ANALYSIS.md  CLINICAL_MANUSCRIPT_INTEGRATION_GUIDE.md  (+244 more)
researchflow-production-main/.claude/: deployment-evaluation.md
researchflow-production-main/.cursor/: mcp.json
researchflow-production-main/.github/: PUSH_INSTRUCTIONS.md  pull_request_template.md
researchflow-production-main/agents/: .dockerignore  .env.example  CRITICAL_PRODUCTION_GAPS_COMPLETED.md  Dockerfile.secure  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS_COMPLETE.md  PRODUCTION_READY.md  QUICKSTART.md  VALIDATION_TEST.py  __init__.py  compliance_agent.py  composio_app_spec.yaml  cursor_integration.py  design_ops_agent.py  docker_ops_agent.py  docker_stack_agent.py  graph.py  orchestration_fix_agent.py  orchestrator.py  preflight_validation_agent.py  pytest.ini  release_guardian_agent.py  requirements.txt  run_agent.py  run_agents.py  spec_ops_agent.py  wiring_audit_agent.py
researchflow-production-main/ci-debugging-agent/: auto_fixer.py  main.py  multi_agent_executor.py  requirements.txt  typescript_fixer_agent.py
researchflow-production-main/config/: ai-orchestration.json  consort-ai-checklist.yaml  tripod-ai-checklist.yaml
researchflow-production-main/demo/: ai_frontend_integration_example.py  api_client_demo.py  complete_system_integration.py  protocol_generation_demo.py  requirements.txt  standalone_demo.py
researchflow-production-main/deploy/: ai-monitoring.yml  alert-rules.yml  feature-flags.json  feature-rollout.sh  grafana-datasources.yml  prometheus.yml
researchflow-production-main/docker/: analytics.yml
researchflow-production-main/docs/: AGENT_CONTRACT.md  AI_ECOSYSTEM_GUIDE.md  AI_ENDPOINT_INVENTORY.md  COMPOSIO_SETUP.md  CUSTOM_AGENTS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READINESS_EXECUTIVE_SUMMARY.md  DEVELOPER.md  DOCKER_STATUS.md  FINE_TUNING.md  INTEGRATION_AUDIT.md  LANGCHAIN_LANGSMITH_SETUP.md  LIVE_MODE_DEPLOYMENT.md  MANUSCRIPT_STUDIO_WIRING_AUDIT.md  N8N_EXECUTION_PLAN.md  N8N_INDEX.md  PHASE_H_ECOSYSTEM_EXTENSIBILITY.md  RAG_LOOP_ACCEPTANCE_CRITERIA.md  RAG_PIPELINE.md  REMAINING_TASKS.md  RESEARCHFLOW_AI_CUSTOMIZATION_MASTER_PLAN.md  SECURITY_AUDIT.md  SESSION_HANDOFF.md  SESSION_HANDOFF_FEB2_2026.md  STAGE10_ARCHITECTURE_DIAGRAM.md  STAGE10_CONFIGURATION_GUIDE.md  STAGE10_INTEGRATION_GUIDE.md  STAGE10_MIGRATION_GUIDE.md  STAGES.md  STAGE_01_INTEGRATION_GUIDE.md  STAGE_IMPLEMENTATION_STATUS.md  TOOL_INTEGRATION_REFERENCE.md  TRANSPARENCY_BUILD_PLAN.md  TRANSPARENCY_BUILD_REFERENCE.md  UI_WIRING_GUIDE.md  USER_ONBOARDING_GUIDE.md  WORKER_IMPORT_ERRORS_BACKLOG.md  agent_response_schema.json  maintenance.md  openapi-drift-audit.md  (+1 more)
researchflow-production-main/k8s/: README.md  cert-manager.yaml  configmap.yaml  deployment.yaml  (+7 more)
(+2037 files in other folders)
