# Root pyproject.toml for ResearchFlow LangGraph Agents
# Used by LangGraph CLI for deployment

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchflow-agents"
version = "0.1.0"
description = "ResearchFlow AI Agent Suite for LangGraph deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "composio-core>=0.7.0",
    "composio-langchain>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.2",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "pyyaml>=6.0.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]

# pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/e2e", "tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: marks tests as async",
    "integration: Integration tests across components",
]
